@@ -123,6 +123,7 @@
     <Compile Include="MouseEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\CommonMeta.cs" />
+    <Compile Include="Utilities\InExclude.cs" />
     <Compile Include="Utilities\Time.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="UIElementNotFoundException.cs" />
