@@ -1,0 +1,8 @@
+﻿namespace DW.CodedUI.Utilities
+{
+    public enum InExclude
+    {
+        With,
+        Without
+    }
+}
